Update CS167-Lab4.md
Add solution for `yarn jar` error